# advent-of-code-2021

./: .gitignore  CMakeLists.txt
day1/: CMakeLists.txt  main.cpp
day10/: CMakeLists.txt  main.cpp
day11/: CMakeLists.txt  main.cpp
day2/: CMakeLists.txt  main.cpp
day3/: CMakeLists.txt  main.cpp
day4/: CMakeLists.txt  main.cpp
day5/: CMakeLists.txt  main.cpp
day6/: CMakeLists.txt  main.cpp
day7/: CMakeLists.txt  main.cpp
day8/: CMakeLists.txt  main.cpp
day9/: CMakeLists.txt  main.cpp
